--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <DOCTYPE HTML!>
  <html lang="en">
     <head>
-      <title>jQuery 007</title>
+      <title>Coffee Order</title>
       <meta charset="utf-5">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="styles/main.css">
@@ -15,14 +15,14 @@
        <ul id="orders">
 
       <script type="text/template" id="order-template">
-        <li data-id="{{id}}">
+        <li class="example" data-id="{{id}}">
           <p>
-            <strong>Name:</strong>
+            <strong>Name :</strong>
             <span class="noedit name">{{name}}</span>
             <input class="edit name"/>
           </p>
           <p>
-            <strong>Drink:</strong>
+            <strong>Drink :</strong>
             <span class="noedit drink">{{drink}}</span>
             <input class="edit drink"/>
           </p>
@@ -35,10 +35,14 @@
 
        </ul>
 
-       <h4>Add a Coffee Order</h4>
-       <p>name: <input type="text" id="name" value=""></p>
-       <p>drink: <input type="text" id="drink" value=""></p>
-       <button id="add-order">Add!</button>
+      <div class="example">
+        <div class="inputOrder">
+         <h4>Add a Coffee Order</h4>
+         <p>name : <input type="text" id="name" value=""></p>
+         <p>drink  : <input type="text" id="drink" value=""></p>
+         <button id="add-order">Add!</button>
+       </div>
+     </div>
 
 
 
